name: bank-holiday-usa
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
-- source-repository: git://github.com/tippenein/holiday
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: TODO
description:
    TODO
category: TODO
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

library
  exposed-modules: Data.Calendar.BankHoliday.UnitedStates
  build-depends:
      base ==4.*
    , time
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base -any,
      bank-holiday-usa -any,
      hspec ==2.*,
      HUnit -any,
      QuickCheck -any
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Spec
    , Data.Time.Calendar.BankHoliday.UnitedStatesSpec
  ghc-options: -fhpc -Wall -Werror
