name: holiday
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: TODO
description:
    TODO
category: TODO
author: brady.ouren <brady.ouren@gmail.com>
source-repository: git://github.com/tippenein/holiday
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

library
  exposed-modules:
      Holiday
      -- HASKELETON: New.Module
  build-depends:
      base ==4.*
  default-language: Haskell2010
  hs-source-dirs: lib
  ghc-prof-options: -auto-all -prof
  ghc-options: -Wall

executable holiday
  main-is: Main.hs
  build-depends:
      base -any,
      holiday -any
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-prof-options: -auto-all -prof
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base -any,
      holiday -any,
      hspec ==2.*,
      HUnit -any,
      QuickCheck -any
  default-language: Haskell2010
  hs-source-dirs: lib test
  other-modules:
      Holiday
      -- HASKELETON: New.Module
      HolidaySpec
      -- HASKELETON: New.ModuleSpec
  ghc-options: -fhpc -Wall -Werror
